# ocr_comparaison

./: README.md  compare_whole_split.py  pdf_to_md.py  pyproject.toml  requirements.txt  util.py
data/output/datalab/: NBA_whole.md
data/output/mistral/: NBA_split_webapi.md  NBA_whole.md
output/: attention_split.md  attention_whole.md  nba_split.md  nba_whole.md
results/: benchmark_report.md
scripts/: benchmark_runner.py  ocr_accuracy.py  ocr_model.py  ocr_report.py  run_all.py  util.py
