[project]
name = "ocr-comparison"
version = "0.1.0"
description = "Benchmarking Mistral OCR and Marker for PDF to Markdown conversion"
authors = [{ name = "User" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
resolver = "uv"

[project.dependencies]
marker = "2.1.5"
mistralai = "*"
requests = ">=2.32.0"
jinja2 = ">=3.1.2"
torch = "==2.6.0"
streamlit = "*"
jupyterlab = "*"
python-dotenv = "*"
PyPDF2 = "*"